--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -1,7 +1,7 @@
 /**
- * Black theme for reveal.js. This is the opposite of the 'white' theme.
+ * nanarino individuation black theme
  *
- * By Hakim El Hattab, http://hakim.se
+ * 2019-8-5 16:57:16
  */
 @import url(../../lib/font/source-sans-pro/source-sans-pro.css);
 section.has-light-background, section.has-light-background h1, section.has-light-background h2, section.has-light-background h3, section.has-light-background h4, section.has-light-background h5, section.has-light-background h6 {
@@ -22,13 +22,13 @@ body {
 
 ::selection {
   color: #fff;
-  background: #bee4fd;
-  text-shadow: none; }
+  background: #ffa6a6;
+  text-shadow: 5px 5px 5px #ee7070; }
 
 ::-moz-selection {
   color: #fff;
-  background: #bee4fd;
-  text-shadow: none; }
+  background: #ffa6a6;
+  text-shadow: 5px 5px 5px #ee7070; }
 
 .reveal .slides section,
 .reveal .slides section > section {
@@ -50,7 +50,7 @@ body {
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
+  text-transform: none;
   text-shadow: none;
   word-wrap: break-word; }
 
@@ -149,7 +149,7 @@ body {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.15); }
 
 .reveal code {
   font-family: monospace;
@@ -209,14 +209,14 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #42affa;
+  color: #dc3434;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #8dcffc;
+  color: #e04848;
   text-shadow: none;
   border: none; }
 
@@ -244,21 +244,21 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #42affa;
+  border-color: #dc3434;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls {
-  color: #42affa; }
+  color: #dc3434; }
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #42affa; }
+  color: #dc3434; }
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
